Tools: SPG Builder - added hex numbers parser (0x,#,$), added comments support (;), added debug info printing

--- a/pentevo/tools/spgbld/src/spgbld/test/demo001.ini
+++ b/pentevo/tools/spgbld/src/spgbld/test/demo001.ini
@@ -1,14 +1,31 @@
+; Description of a build - up to 32 chars
 Desc = TS-Conf scroller demo by TS-Labs
-Start = 26624
-Stack = 26600
-Resident = 23296
+
+; Start address
+Start = 0x6800
+
+; SP adddress
+Stack = $67E8
+
+; Resident address (16 bytes long)
+Resident = #5B00
+
+; Page at #C000 when started
 Page3 = 0
+
+; CPU clock: 0 - 3,5MHz / 1 - 7MHz / 2 - 14MHz / 3 - 14+MHz
 Clock = 3
+
+; INT: 0 - DI / 1 - EI
 INT = 1
+
+; Pager address (0 - not used)
 Pager = 0
-Block = 49152, 5, scr.bin
-Block = 49152, 10, font32_0.bin
-Block = 49152, 11, font32_1.bin
-Block = 59392, 5, demo001.001.bin
-Block = 49152, 2, demo001.002.bin
-Block = 56320, 5, 5c00.bin
+
+; Blocks description: address (512 multiple, #C000-#FE00), page number, filename
+Block = #C000,5, 	scr.bin
+Block = #C000, 10, font32_0.bin
+Block = #C000, 11, font32_1.bin
+Block = #E800, 5, demo001.001.bin
+Block = #C000, 2, demo001.002.bin
+Block = #DC00, 5, 5c00.bin
