--- a/pentevo/fpga/current/quartus/top.qsf
+++ b/pentevo/fpga/current/quartus/top.qsf
@@ -184,7 +184,7 @@ set_location_assignment PIN_208 -to dram_rd[0]
 
 # Classic Timing Assignments
 # ==========================
-set_global_assignment -name NUMBER_OF_PATHS_TO_REPORT 2000
+set_global_assignment -name NUMBER_OF_PATHS_TO_REPORT 5000
 
 # Analysis & Synthesis Assignments
 # ================================
@@ -214,7 +214,7 @@ set_global_assignment -name FITTER_EFFORT "STANDARD FIT"
 set_global_assignment -name SLOW_SLEW_RATE ON
 set_global_assignment -name AUTO_PACKED_REGISTERS NORMAL
 set_global_assignment -name FIT_ONLY_ONE_ATTEMPT OFF
-set_global_assignment -name SEED 1
+set_global_assignment -name SEED 2
 set_global_assignment -name ROUTER_TIMING_OPTIMIZATION_LEVEL MINIMUM
 set_global_assignment -name PLACEMENT_EFFORT_MULTIPLIER 1.0
 set_global_assignment -name ROUTER_EFFORT_MULTIPLIER 1.0
@@ -227,7 +227,7 @@ set_global_assignment -name OPTIMIZE_IOC_REGISTER_PLACEMENT_FOR_TIMING OFF
 set_global_assignment -name USE_CONFIGURATION_DEVICE OFF
 set_global_assignment -name GENERATE_RBF_FILE ON
 set_global_assignment -name ON_CHIP_BITSTREAM_DECOMPRESSION OFF
-set_global_assignment -name RESERVE_ALL_UNUSED_PINS_NO_OUTPUT_GND "AS INPUT TRI-STATED"
+set_global_assignment -name RESERVE_ALL_UNUSED_PINS_NO_OUTPUT_GND "AS OUTPUT DRIVING AN UNSPECIFIED SIGNAL"
 
 # Simulator Assignments
 # =====================
@@ -240,9 +240,9 @@ set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE ../sim_vw/dram.cvwf
 
 	# Classic Timing Assignments
 	# ==========================
-	set_global_assignment -name BASED_ON_CLOCK_SETTINGS "FPGA clock" -section_id "Z80 clock"
-	set_global_assignment -name MULTIPLY_BASE_CLOCK_PERIOD_BY 2 -section_id "Z80 clock"
-	set_global_assignment -name OFFSET_FROM_BASE_CLOCK "-8 ns" -section_id "Z80 clock"
+set_global_assignment -name BASED_ON_CLOCK_SETTINGS "FPGA clock" -section_id "Z80 clock"
+set_global_assignment -name MULTIPLY_BASE_CLOCK_PERIOD_BY 2 -section_id "Z80 clock"
+set_global_assignment -name OFFSET_FROM_BASE_CLOCK "-8 ns" -section_id "Z80 clock"
 
 # end CLOCK(Z80 clock)
 # --------------------
@@ -252,7 +252,7 @@ set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE ../sim_vw/dram.cvwf
 
 	# Classic Timing Assignments
 	# ==========================
-	set_global_assignment -name FMAX_REQUIREMENT "28 MHz" -section_id "FPGA clock"
+set_global_assignment -name FMAX_REQUIREMENT "28 MHz" -section_id "FPGA clock"
 
 # end CLOCK(FPGA clock)
 # ---------------------
@@ -262,7 +262,7 @@ set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE ../sim_vw/dram.cvwf
 
 	# Classic Timing Assignments
 	# ==========================
-	set_global_assignment -name FMAX_REQUIREMENT "5.5296 MHz" -section_id "SPI clock"
+set_global_assignment -name FMAX_REQUIREMENT "5.5296 MHz" -section_id "SPI clock"
 
 # end CLOCK(SPI clock)
 # --------------------
@@ -272,39 +272,39 @@ set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE ../sim_vw/dram.cvwf
 
 	# Pin & Location Assignments
 	# ==========================
-	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to clkz_out
-	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rwe_n
-	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rras0_n
-	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rras1_n
-	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rucas_n
-	set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rlcas_n
+set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to clkz_out
+set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rwe_n
+set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rras0_n
+set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rras1_n
+set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rucas_n
+set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to rlcas_n
 
 	# Classic Timing Assignments
 	# ==========================
-	set_instance_assignment -name CLOCK_SETTINGS "FPGA clock" -to fclk
-	set_instance_assignment -name CLOCK_SETTINGS "Z80 clock" -to clkz_in
-	set_instance_assignment -name CLOCK_SETTINGS "SPI clock" -to spick
-	set_instance_assignment -name CUT ON -from clkz_in -to fclk
-	set_instance_assignment -name CUT ON -from dram_rd -to "zmem:z80mem|rd_buf"
-	set_instance_assignment -name CUT ON -from "zmem:z80mem|rd_buf" -to d
-	set_instance_assignment -name CUT ON -from "zclock:zclock|zclk_out" -to clkz_out
+set_instance_assignment -name CLOCK_SETTINGS "FPGA clock" -to fclk
+set_instance_assignment -name CLOCK_SETTINGS "Z80 clock" -to clkz_in
+set_instance_assignment -name CLOCK_SETTINGS "SPI clock" -to spick
+set_instance_assignment -name CUT ON -from clkz_in -to fclk
+set_instance_assignment -name CUT ON -from dram_rd -to "zmem:z80mem|rd_buf"
+set_instance_assignment -name CUT ON -from "zmem:z80mem|rd_buf" -to d
+set_instance_assignment -name CUT ON -from "zclock:zclock|zclk_out" -to clkz_out
 
 	# Fitter Assignments
 	# ==================
-	set_instance_assignment -name GLOBAL_SIGNAL ON -to fclk
-	set_instance_assignment -name GLOBAL_SIGNAL ON -to clkz_in
+set_instance_assignment -name GLOBAL_SIGNAL ON -to fclk
+set_instance_assignment -name GLOBAL_SIGNAL ON -to clkz_in
 
 # end ENTITY(top)
 # ---------------
 set_global_assignment -name NORMAL_LCELL_INSERT OFF
 set_global_assignment -name CARRY_OUT_PINS_LCELL_INSERT OFF
+set_global_assignment -name VERILOG_FILE ../video/mem/video_sfile.v
 set_global_assignment -name VERILOG_FILE ../video/video_ts_render.v
 set_global_assignment -name VERILOG_FILE ../video/video_ts.v
 set_global_assignment -name VERILOG_FILE ../video/mem/video_tsline1.v
 set_global_assignment -name VERILOG_FILE ../video/mem/video_tsline0.v
 set_global_assignment -name MIF_FILE ../video/mem/video_cram.mif
 set_global_assignment -name VERILOG_FILE ../video/mem/video_cram.v
-set_global_assignment -name QIP_FILE ../video/mem/video_sfile.qip
 set_global_assignment -name VERILOG_FILE ../video/mem/video_tmbuf.v
 set_global_assignment -name VERILOG_FILE ../video/mem/video_vmem.v
 set_global_assignment -name VERILOG_FILE ../common/slavespi.v
@@ -340,3 +340,5 @@ set_global_assignment -name VERILOG_FILE ../common/spi2.v
 set_global_assignment -name VERILOG_FILE ../common/resetter.v
 set_global_assignment -name VERILOG_FILE ../top.v
 set_global_assignment -name ZIP_VECTOR_WAVEFORM_FILE ../sim_vw/dram.cvwf
+set_global_assignment -name AUTO_RESOURCE_SHARING ON
+set_global_assignment -name CASCADE_CHAIN_LENGTH 0
