--- a/pentevo/fpga/current/quartus/top.qsf
+++ b/pentevo/fpga/current/quartus/top.qsf
@@ -353,3 +353,4 @@ set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to dram_ra[0]
 set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to dram_ra[8]
 set_instance_assignment -name FAST_OUTPUT_REGISTER ON -to dram_ra[9]
 set_global_assignment -name QIP_FILE ../video/mem/video_sfile.qip
+set_global_assignment -name QIP_FILE ../video/mem/video_tmbuf.qip
